ping/overlays/qa/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: ping
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
